@@ -162,7 +162,7 @@ using the default set of options, the following values are set::
 * The setup-instance's `optionsflags` attribute is passed. It
   includes by default the following doctest constants:
 
-     >>> from zope.testing import doctest
+     >>> import doctest
      >>> setup.optionflags == (doctest.ELLIPSIS+
      ...                       doctest.NORMALIZE_WHITESPACE |
      ...                       doctest.REPORT_NDIFF)
@@ -325,9 +325,9 @@ attributes mentioned above are settable at creation time, namely:
 
 - `optionflags`
 
-    See the `zope.testing.doctest` module for all optionflags::
+    See the `doctest` module for all optionflags::
 
-       >>> from zope.testing import doctest
+       >>> import doctest
        >>> mysetup = FunctionalDocTestSetup(
        ...     cave, optionflags=(doctest.ELLIPSIS +
        ...                        doctest.REPORT_UDIFF))
@@ -463,8 +463,10 @@ To show this, we first create a custom layer::
 
    >>> from zope.app.testing.functional import ZCMLLayer
    >>> import os.path
+   >>> import z3c.testsetup
+   >>> pkgpath = os.path.dirname(z3c.testsetup.__file__)
    >>> mylayer = ZCMLLayer(
-   ...     os.path.join(os.path.dirname(__file__), 'ftesting.zcml'),
+   ...     os.path.join(pkgpath, 'functional', 'ftesting.zcml'),
    ...     __name__,
    ...     'MyFunctionalLayer')
 
