@@ -23,7 +23,9 @@ functional tests. Consider the example given in the
 package of the ``tests``::
 
     >>> import os
-    >>> cavepath = os.path.join(os.path.dirname(__file__), 'tests', 'cave')
+    >>> import z3c.testsetup
+    >>> pkgpath = os.path.dirname(z3c.testsetup.__file__)
+    >>> cavepath = os.path.join(pkgpath, 'tests', 'cave')
     >>> setupfile = os.path.join(cavepath, 'samplesetup_short0.py')
     >>> print open(setupfile).read()
     import z3c.testsetup
