@@ -8,5 +8,6 @@ This test tests the functionality of ``globs``. The framework should
 provide us a ``basename`` function, which we do not have to define nor
 import here::
 
-  >>> basename(__file__)
-  'globstest.chk'
+  >>> import z3c.testsetup
+  >>> basename(z3c.testsetup.__file__)
+  '__init__...'
